# biz/model/platform/common.pb.go
@@ -76,18 +76,18 @@ func (x *BaseResponse) GetMsg() string {
 	return ""
 }
 
-// PageParams 统一分页请求参数，page_num 默认为 0
-type PageParams struct {
+// CursorParams 统一游标分页请求参数
+type CursorParams struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	PageNum  int32 `protobuf:"varint,1,opt,name=page_num,json=pageNum,proto3" form:"page_num" json:"page_num" query:"page_num"`
-	PageSize int32 `protobuf:"varint,2,opt,name=page_size,json=pageSize,proto3" form:"page_size" json:"page_size" query:"page_size"`
+	Cursor string `protobuf:"bytes,1,opt,name=cursor,proto3" form:"cursor" json:"cursor" query:"cursor"`
+	Limit  int32  `protobuf:"varint,2,opt,name=limit,proto3" form:"limit" json:"limit" query:"limit"`
 }
 
-func (x *PageParams) Reset() {
-	*x = PageParams{}
+func (x *CursorParams) Reset() {
+	*x = CursorParams{}
 	if protoimpl.UnsafeEnabled {
 		mi := &file_common_proto_msgTypes[1]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -95,13 +95,13 @@ func (x *PageParams) Reset() {
 	}
 }
 
-func (x *PageParams) String() string {
+func (x *CursorParams) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*PageParams) ProtoMessage() {}
+func (*CursorParams) ProtoMessage() {}
 
-func (x *PageParams) ProtoReflect() protoreflect.Message {
+func (x *CursorParams) ProtoReflect() protoreflect.Message {
 	mi := &file_common_proto_msgTypes[1]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -113,21 +113,21 @@ func (x *PageParams) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use PageParams.ProtoReflect.Descriptor instead.
-func (*PageParams) Descriptor() ([]byte, []int) {
+// Deprecated: Use CursorParams.ProtoReflect.Descriptor instead.
+func (*CursorParams) Descriptor() ([]byte, []int) {
 	return file_common_proto_rawDescGZIP(), []int{1}
 }
 
-func (x *PageParams) GetPageNum() int32 {
+func (x *CursorParams) GetCursor() string {
 	if x != nil {
-		return x.PageNum
+		return x.Cursor
 	}
-	return 0
+	return ""
 }
 
-func (x *PageParams) GetPageSize() int32 {
+func (x *CursorParams) GetLimit() int32 {
 	if x != nil {
-		return x.PageSize
+		return x.Limit
 	}
 	return 0
 }
@@ -140,14 +140,13 @@ var file_common_proto_rawDesc = []byte{
 	0x42, 0x61, 0x73, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x12, 0x0a, 0x04,
 	0x63, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x04, 0x63, 0x6f, 0x64, 0x65,
 	0x12, 0x10, 0x0a, 0x03, 0x6d, 0x73, 0x67, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6d,
-	0x73, 0x67, 0x22, 0x44, 0x0a, 0x0a, 0x50, 0x61, 0x67, 0x65, 0x50, 0x61, 0x72, 0x61, 0x6d, 0x73,
-	0x12, 0x19, 0x0a, 0x08, 0x70, 0x61, 0x67, 0x65, 0x5f, 0x6e, 0x75, 0x6d, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x05, 0x52, 0x07, 0x70, 0x61, 0x67, 0x65, 0x4e, 0x75, 0x6d, 0x12, 0x1b, 0x0a, 0x09, 0x70,
-	0x61, 0x67, 0x65, 0x5f, 0x73, 0x69, 0x7a, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08,
-	0x70, 0x61, 0x67, 0x65, 0x53, 0x69, 0x7a, 0x65, 0x42, 0x23, 0x5a, 0x21, 0x76, 0x69, 0x64, 0x65,
-	0x6f, 0x2d, 0x70, 0x6c, 0x61, 0x74, 0x66, 0x6f, 0x72, 0x6d, 0x2f, 0x62, 0x69, 0x7a, 0x2f, 0x6d,
-	0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x70, 0x6c, 0x61, 0x74, 0x66, 0x6f, 0x72, 0x6d, 0x62, 0x06, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x73, 0x67, 0x22, 0x3c, 0x0a, 0x0c, 0x43, 0x75, 0x72, 0x73, 0x6f, 0x72, 0x50, 0x61, 0x72, 0x61,
+	0x6d, 0x73, 0x12, 0x16, 0x0a, 0x06, 0x63, 0x75, 0x72, 0x73, 0x6f, 0x72, 0x18, 0x01, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x06, 0x63, 0x75, 0x72, 0x73, 0x6f, 0x72, 0x12, 0x14, 0x0a, 0x05, 0x6c, 0x69,
+	0x6d, 0x69, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x05, 0x6c, 0x69, 0x6d, 0x69, 0x74,
+	0x42, 0x23, 0x5a, 0x21, 0x76, 0x69, 0x64, 0x65, 0x6f, 0x2d, 0x70, 0x6c, 0x61, 0x74, 0x66, 0x6f,
+	0x72, 0x6d, 0x2f, 0x62, 0x69, 0x7a, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x70, 0x6c, 0x61,
+	0x74, 0x66, 0x6f, 0x72, 0x6d, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -165,7 +164,7 @@ func file_common_proto_rawDescGZIP() []byte {
 var file_common_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_common_proto_goTypes = []interface{}{
 	(*BaseResponse)(nil), // 0: api.video.v1.BaseResponse
-	(*PageParams)(nil),   // 1: api.video.v1.PageParams
+	(*CursorParams)(nil), // 1: api.video.v1.CursorParams
 }
 var file_common_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
@@ -194,7 +193,7 @@ func file_common_proto_init() {
 			}
 		}
 		file_common_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*PageParams); i {
+			switch v := v.(*CursorParams); i {
 			case 0:
 				return &v.state
 			case 1:
